# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).


## 4.0.11 - 2025-09-14
### Fixed
- Checking "not not expire" on invoices wasn't saving.
- Accept new registrations is only set manually by admin, not automatically. We only check for course participants
  number
- Update of course cache when session dates are modified was not done.


## 4.0.10 - 2025-08-29
### Fixed
- Mass convocation email was not working.


## 4.0.9 - 2025-08-21
### Fixed
- Waiting slots function was no longer working.

### Added
- Success view when no payment is required for a registration.


## 4.0.8 - 2025-08-11
### Added
- New "course without registration" .


## 4.0.7 - 2025-08-04
### Added
- New "do not expire" setting on invoices, to prevent them from being automatically expired.
- New copy to admin option for course supervisors.


## 4.0.6 - 2025-07-17
### Fixed
- Emergency numbers exports when associated to parent.
- Logging everyone out is now done in an asynchronous way.


## 4.0.5 - 2025-05-05
### Fixed
- Navigation issue in wizard
- AVS lookup in childre app


## 4.0.4 - 2025-04-23
### Fixed
- Issue when children import file lacks ID for some children
- Display issue in import form

## 4.0.3 - 2025-04-10
### Added
Child marked_up_price

## 4.0.2 - 2025-04-04
### Changed
- Email attachments can be removed
- mails can be erased from cache


## 4.0.1 - 2025-03-27
### Added
Child lookup based on avs number

## 4.0.0 - 2025-03-18
### Changed
New registration wizard app.


## 3.10.4 2025-01-13
### Changed
Various version bumps. There was an issue with ckeditor.


## 3.10.3 2025-01-06
### Fixed
- Issue where you might try to cancel several time a registration to the same course
- Issue when creating a course instructor using the backend view


## 3.10.2 2024-10-07
### Fixed