@@ -1,0 +1,25 @@
+# Generated by Django 3.2.25 on 2025-09-14 05:44
+
+from django.db import migrations, models
+
+def populate_has_waiting_list(apps, schema_editor):
+    Course = apps.get_model("activities", "Course")
+    for course in Course.objects.all():
+        course.has_waiting_list = course.waiting_slots.exists()
+        course.save(update_fields=["has_waiting_list"])
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('activities', '0031_auto_20250811_1146'),
+    ]
+
+    operations = [
+        migrations.AddField(
+            model_name='course',
+            name='has_waiting_list',
+            field=models.BooleanField(default=False, editable=False),
+        ),
+        migrations.RunPython(populate_has_waiting_list, reverse_code=migrations.RunPython.noop),
+    ]
