@@ -7,6 +7,9 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 
 ## 4.0.11 - 2025-09-14
+### Changed
+- Assume the course is not available for registrations if a waiting slot is present
+
 ### Fixed
 - Checking "not not expire" on invoices wasn't saving.
 - Accept new registrations is only set manually by admin, not automatically. We only check for course participants
